Verion 0.9.45dev (?? ??? 2004)
  - Fixed Bug 1025547: Exporting data - change vcal to ical
  - Patch 1021530: Fixed purge with "all" selected
  - SQL Query enhancement for function read_repeated_events to speed up processing
  - Fixed Bug 1017097: Can't Delete/Edit First Layer
  - Fixed Bug 1007496: Repeat Type off-by-one in Event Details
  - Fixed bug: iCal import would fail if the file included section with
    timezone info in it.
  - Patch 1002156: improved html for event popups
  - Added javascript to admin page to remove options that are not relavant
    (such as all the options for public access when public access is disabled)
  - Added login icon to login page
  - Added system setting for making public access selected as a participant
    by default for new events.
  - Added patch 1006000: added time monthbar view
  - Fixed bug 1004162: user color preferences remain active after the
    admin turns "allow user color customizations" off.
  - Updated week/day/month view to not include "target" in meta-refresh
    since it will not xhtml validate.
  - Fixed bug: iCal for multiday events was adding extra day at end
Verion 0.9.44 (02 Aug 2004)
  - Fixed bug 1001054: deleting user was not deleting from webcal_asst table
  - Fixed bug 989443: http login does not work with http on newer PHP version
  - Added patch 1001078: xhtml error in week.php
  - Added patch 1000911: no CR in site_extras field when displayed
  - Added patch 1000220: removed font tag from trailer.php
  - Fixed bug in repeating event conflict checking when using "month by day"
  - Added upcoming.php page that can be used as an iframe in non-WebCalendar
    pages to present a list of upcoming events.
  - Fixed bug 960897: Could not modify user's email address if no last
    name was set
  - Fixed bug 980215: GLobal var $STARTVIEW was not declared global.
  - Fixed bug: do_redirect() calls should not have the '&' escaped into '&amp;'